Higher order derivates submission 1&2

--- a/static/realanalysis/Sequences and Series of Functions/stonewiestrasstheorem/stonewiestrasstheorem.html
+++ b/static/realanalysis/Sequences and Series of Functions/stonewiestrasstheorem/stonewiestrasstheorem.html
@@ -78,6 +78,7 @@ P_3(x) =&amp; P_2(x) + \frac{x^2 - p_{2}^2(x)}{2} \\
 <li><p>There are different definitions given for this thorem over the years, what makes them different, that they are proved differently by mathematicians, or similar that they are put under the same name.</p></li>
 </ul>
 <h2 id="references-and-further-reading">References and Further Reading</h2>
+<b>References</b><br/>
 <p>Principles of Mathematical Analysis by W. Rudin 3rd Ed. http://math.uchicago.edu/may/REU2016/REUPapers/Gaddy.pdf https://minds.wisconsin.edu/bitstream/handle/1793/67009/rudin</p>
 <h2 id="further-reading" class="unnumbered unnumbered">Further Reading</h2>
 <p>[1] https://www.isibang.ac.in/ sury/hyderstone.pdf</p>
