--- a/static/realanalysis/Limit/limit-seq/limit-seq.html
+++ b/static/realanalysis/Limit/limit-seq/limit-seq.html
@@ -30,7 +30,7 @@
 
 
 <div class="output_html rendered_html output_subarea output_execute_result">
-<video src="Neighbourhood.mp4" width="100%" controls  >
+<video src="Neighbourhood.mp4" poster="negihbourhood.png" width="100%" controls  >
       Your browser does not support the <code>video</code> element.
     </video>
 </div>
@@ -67,7 +67,7 @@
 
 
 <div class="output_html rendered_html output_subarea output_execute_result">
-<video src="sequence.mp4" width="100%" controls  >
+<video src="sequence.mp4" width="100%" poster="sequence.png" controls  >
       Your browser does not support the <code>video</code> element.
     </video>
 </div>
@@ -98,7 +98,7 @@
 
 
 <div class="output_html rendered_html output_subarea output_execute_result">
-<video src="Distance.mp4" width="100%" controls  >
+<video src="Distance.mp4" poster="distance.png" width="100%" controls  >
       Your browser does not support the <code>video</code> element.
     </video>
 </div>
@@ -129,7 +129,7 @@ In our case, the value of $N = 15$ (for $\epsilon = 1$). Indicating that all n &
 
 
 <div class="output_html rendered_html output_subarea output_execute_result">
-<video src="full_video.mp4" width="100%" controls  >
+<video src="full_video.mp4" poster="full.png" width="100%" controls  >
       Your browser does not support the <code>video</code> element.
     </video>
 </div>
