--- a/static/realanalysis/Sequences and Series of Functions/polynomialandrationalfunctions/polynomialandrationalfunctions.html
+++ b/static/realanalysis/Sequences and Series of Functions/polynomialandrationalfunctions/polynomialandrationalfunctions.html
@@ -52,14 +52,14 @@ In simple words, the end behavior of a function describes the trend of the graph
 <p><span class="math inline">\(f(x)=kx^n\)</span></p>
 <p>where <span class="math inline">\(x\)</span> and <span class="math inline">\(n\)</span> are real numbers, and <span class="math inline">\(k\)</span> is known as the coefficient. So, lets see a few examples and their behavior.<br />
 
-<video src="Power_func.mp4" width="100%" controls  >
+<video src="Power_func.mp4" poster="powerfunc.png" width="100%" controls  >
       Your browser does not support the <code>video</code> element.
 </video>
 
 <br />
 Any Polynomial functions’ end behavior depends upon the power of the Leading Term. The picture will be clear by looking through an example. We’ll also look at the local behavior(Turning Point) and x <code>&amp;</code> y- intercepts.<br />
 
-<video src="Polynomial_func.mp4" width="100%" controls  >
+<video src="Polynomial_func.mp4" poster="polyfunc.png" width="100%" controls  >
       Your browser does not support the <code>video</code> element.
 </video>
 
@@ -77,7 +77,7 @@ then the rational function,we obtain is<br />
 <span class="math inline">\(f(x)=\frac{1}{x}\)</span> by definition in <span class="math inline">\(Motivation 2\)</span><br />
 </p>
 
-<video src="Rational_func.mp4" width="100%" controls  >
+<video src="Rational_func.mp4" poster="rationalfunc.png" width="100%" controls  >
       Your browser does not support the <code>video</code> element.
 </video>
 
