--- a/static/realanalysis/Sequences and Series of Functions/stonewiestrasstheorem/stonewiestrasstheorem.html
+++ b/static/realanalysis/Sequences and Series of Functions/stonewiestrasstheorem/stonewiestrasstheorem.html
@@ -33,7 +33,7 @@ Then the question arises whether this condition is necessary for a function to b
 Let the example be <span class="math inline">\(f(x)=|x|\)</span><br />
 </p></li>
 
-<video src="Cont_func.mp4" width="100%" controls  >
+<video src="Cont_func.mp4" poster="contfunc.png" width="100%" controls  >
       Your browser does not support the <code>video</code> element.
 </video>
 
@@ -59,7 +59,7 @@ P_3(x) =&amp; P_2(x) + \frac{x^2 - p_{2}^2(x)}{2} \\
 <p>Now, observe the graphs to see how <span class="math inline">\(P_n(x)\)</span> converges uniformly to <span class="math inline">\(f(x)\)</span>. </li>
 
 
-<video src="seqofpolynomials.mp4" width="100%" controls  >
+<video src="seqofpolynomials.mp4" poster="seqpoly.png" width="100%" controls  >
       Your browser does not support the <code>video</code> element.
 </video>
 
