--- a/static/realanalysis/Sequences and Series of Functions/uniformconvergence/uniformconvergence.html
+++ b/static/realanalysis/Sequences and Series of Functions/uniformconvergence/uniformconvergence.html
@@ -24,7 +24,7 @@ In simple words, Pointwise convergence means that, at every point the sequence o
 Consequently, Uniform convergence means there is an overall speed of convergence.<br />
 <br />
 
-<video src="output1.mp4" width="100%" controls  >
+<video src="output1.mp4" poster="output1.png" width="100%" controls  >
       Your browser does not support the <code>video</code> element.
 </video>
 <br/>
@@ -32,7 +32,7 @@ Pointwise convergence is ideally the most natural way to define convergence, but
 <br />
 Similar is the situation when we talk about continuity. If <span class="math inline">\(f_n\)</span> is a continuous function and is pointwise convergent to <span class="math inline">\(f\)</span>, we cannot be sure that f is also continuous. It is illustrated through the following example.<br />
 <br/>
-<video src="output2.mp4" width="100%" controls  >
+<video src="output2.mp4" poster="output2.png" width="100%" controls  >
       Your browser does not support the <code>video</code> element.
 </video>
 
@@ -49,7 +49,7 @@ Here, we can visualise the importance of Uniform Convergence which is well behav
 <p>In the definition, <span class="math inline">\(f_n\)</span> is <span class="math inline">\(Continuous\)</span>.<br />
 So,first we check whether the function <span class="math inline">\(f_n\)</span> is <span class="math inline">\(Continuous\)</span> or <span class="math inline">\(Not\)</span>.<br />
 
-<video src="fnContinuity.mp4" width="100%" controls  >
+<video src="fnContinuity.mp4" poster="fncont.png" width="100%" controls  >
       Your browser does not support the <code>video</code> element.
 </video>
 
@@ -62,7 +62,7 @@ Suppose that <span class="math inline">\(f_n\)</span> is a sequence of functions
 <br />
 The following animation shows that <span class="math inline">\(\forall x \in [0,1]\)</span> , <span class="math inline">\(f_n\)</span> converges to <span class="math inline">\(f = 0\)</span>.<br />
 
-<video src="fnConvergence.mp4" width="100%" controls  >
+<video src="fnConvergence.mp4" poster="fnconverge.png" width="100%" controls  >
       Your browser does not support the <code>video</code> element.
 </video>
 
